:sparkles: add field to event payload (#6)
* :sparkles: add field to event payload

* :bug: fix test error

* :bug: fix endpoint
