# docs/swagger.json
@@ -130,6 +130,19 @@
                 }
             }
         },
+        "timestamppb.Timestamp": {
+            "type": "object",
+            "properties": {
+                "nanos": {
+                    "description": "Non-negative fractions of a second at nanosecond resolution. Negative\nsecond values with fractions must still have non-negative nanos values\nthat count forward in time. Must be from 0 to 999,999,999\ninclusive.",
+                    "type": "integer"
+                },
+                "seconds": {
+                    "description": "Represents seconds of UTC time since Unix epoch\n1970-01-01T00:00:00Z. Must be from 0001-01-01T00:00:00Z to\n9999-12-31T23:59:59Z inclusive.",
+                    "type": "integer"
+                }
+            }
+        },
         "v1.QueryEventByBlockRangeRequest": {
             "type": "object",
             "properties": {
@@ -156,8 +169,14 @@
                 "index": {
                     "type": "integer"
                 },
+                "timestamp": {
+                    "$ref": "#/definitions/timestamppb.Timestamp"
+                },
                 "transactionId": {
                     "type": "string"
+                },
+                "transactionIndex": {
+                    "type": "integer"
                 },
                 "type": {
                     "type": "string"
